--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="matter.js" type="text/javascript"></script>
+<script src="decomp.min.js"></script>
 <script src="main.js"></script>
 
 </html>
