--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="matter.js" type="text/javascript"></script>
-<script src="decomp.min.js"></script>
-<script src="main.js"></script>
+<script src="./js/pathseg.js"></script>
+<script src="./js/matter.js" type="text/javascript"></script>
+<script src="./js/decomp.min.js"></script>
+<script src="./js/main.js"></script>
+<!-- <script src="./js/sandwich.js"></script> -->
+<script src="./js/collision.js"></script>
+<script src="./js/level1.js"></script>
+<script src="./js/level2.js"></script>
+
 
 </html>
