--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <script src="./js/matter.js" type="text/javascript"></script>
 <script src="./js/decomp.min.js"></script>
 <script src="./js/main.js"></script>
-<!-- <script src="./js/sandwich.js"></script> -->
-<script src="./js/collision.js"></script>
+<script src="./js/sandwich.js"></script>
 <script src="./js/level1.js"></script>
 <script src="./js/level2.js"></script>
 
+<script src="./js/collision.js"></script>
 
 </html>
